objects/ASI_HK_CRM_Visitation_Plan_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_VN_Uniform_Weared__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uniform Weared</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Brand__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>VN Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>Visitation_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Address__c</fullName>
        <label>Visit Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Description__c</fullName>
        <label>Visit Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Duration__c</fullName>
        <formula>(ASI_TH_CRM_Visit_Date_Time_To__c -  ASI_TH_CRM_Visit_Date_Time_From__c)* 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Duration (hour)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Account_Address__c</fullName>
        <formula>ASI_HK_CRM_Account__r.ASI_HK_CRM_Address__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Account_Record_Type__c</fullName>
        <formula>ASI_HK_CRM_Account__r.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (TW)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (TH), Wholesaler (TH), Modern Trade (TH), Potential Outlet (TH)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK), Potential Account (HK), Wholesaler (HK), Potential Account - Prestige (HK)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visitation Plan Details</relationshipLabel>
        <relationshipName>ASI_HK_CRM_Visitation_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Achievement_Detail__c</fullName>
        <label>Achievement Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Achievement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achievement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Customer_Code__c</fullName>
        <formula>ASI_HK_CRM_Account__r.ASI_KOR_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Meeting_Notes_c__c</fullName>
        <label>Meeting_Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Objective_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objective Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Subject__c</fullName>
        <defaultValue>&apos;Account Visitation&apos;</defaultValue>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Visit_Objective__c</fullName>
        <label>Visit Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Visitation_Plan__c</fullName>
        <label>Visitation Plan</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan__c</referenceTo>
        <relationshipName>ASI_HK_CRM_Visitation_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Bottle_Label__c</fullName>
        <label>Bottle Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>GMA</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Custody_Condition__c</fullName>
        <label>Custody Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Not Clean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Familiar_WITH_PRM__c</fullName>
        <label>Familiar WITH PRM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Follow_Plan__c</fullName>
        <label>Follow Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Improvements__c</fullName>
        <label>Improvements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Incentive__c</fullName>
        <label>Incentive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Not_Recommend_Reason__c</fullName>
        <label>Not Recommend Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Outlet_Type__c</fullName>
        <label>Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>NCO</fullName>
                </value>
                <value>
                    <fullName>Competitor CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Recommend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MY_CRM_Top_Of_Staff_Mind__c</fullName>
        <label>Top Of Staff Mind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_100PPS__c</fullName>
        <label>100PPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_ABS_Elyx__c</fullName>
        <label>ABS Elyx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_ABS_Flavor__c</fullName>
        <label>ABS Flavor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_ABS_Vodka__c</fullName>
        <label>ABS Vodka</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Activity_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Agree_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_BF__c</fullName>
        <label>BF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Bacardi__c</fullName>
        <label>Bacardi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_BarSupply_Others__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_BarSupply__c</fullName>
        <label>Bar Supply</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serving Set</fullName>
                </value>
                <value>
                    <fullName>Tower, Bucket</fullName>
                </value>
                <value>
                    <fullName>Ice Bucket</fullName>
                </value>
                <value>
                    <fullName>Stirrer</fullName>
                </value>
                <value>
                    <fullName>Coaster</fullName>
                </value>
                <value>
                    <fullName>Bar mat</fullName>
                </value>
                <value>
                    <fullName>Pourer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_CR12__c</fullName>
        <label>CR12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_CR18__c</fullName>
        <label>CR18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_Activity__c</fullName>
        <label>Competitor Activity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_Bacardi_Rum__c</fullName>
        <label>Bacardi Rum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_GreyGoose__c</fullName>
        <label>GreyGoose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_JWB__c</fullName>
        <label>JWB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_JWR__c</fullName>
        <label>JWR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Competitor_Smirnoff__c</fullName>
        <label>Smirnoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Consumer__c</fullName>
        <label>Consumer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Customer__c</fullName>
        <label>Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Evaluate_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fine_Wine__c</fullName>
        <label>Fine Wine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Grey_Goose__c</fullName>
        <label>Grey Goose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Havana__c</fullName>
        <label>Havana</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Identity_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JC_Sparkling__c</fullName>
        <label>JC Sparkling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JC_Still__c</fullName>
        <label>JC Still</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Jameson__c</fullName>
        <label>Jameson</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Objectives__c</fullName>
        <label>Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Display Checking</fullName>
                </value>
                <value>
                    <fullName>Document Collection</fullName>
                </value>
                <value>
                    <fullName>Drop Off</fullName>
                </value>
                <value>
                    <fullName>List in new product</fullName>
                </value>
                <value>
                    <fullName>Observing &amp; Gathering Info.</fullName>
                </value>
                <value>
                    <fullName>Performance Review</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Promotion discuss</fullName>
                </value>
                <value>
                    <fullName>Promotion Plan/ Incentive</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Renew / Sign Contract</fullName>
                </value>
                <value>
                    <fullName>RSP</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Stock Checking</fullName>
                </value>
                <value>
                    <fullName>VIP visiting</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet_Name__c</fullName>
        <label>Outlet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PRT_Activity__c</fullName>
        <label>PRT Activity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PRT_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_PromotionMaterial_Others__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Promotion_Material__c</fullName>
        <label>Promotion Material</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tend Card</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Menu Drink List</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Signage_Others__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Signage__c</fullName>
        <label>Signage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Light Box</fullName>
                </value>
                <value>
                    <fullName>Tailormade light Box</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Bar Styling</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Special_Display__c</fullName>
        <label>Special Display</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy Bottle</fullName>
                </value>
                <value>
                    <fullName>Stand Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Summary_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_TGL__c</fullName>
        <label>TGL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Visit_Date_Time_From__c</fullName>
        <label>Actual Visit Date (From)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Visit_Date_Time_To__c</fullName>
        <label>Actual Visit Date (To)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Who__c</fullName>
        <label>Who</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bartender</fullName>
                </value>
                <value>
                    <fullName>DFB</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Guard</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Stock Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visitation Plan Detail</label>
    <nameField>
        <displayFormat>VPD-{00000}</displayFormat>
        <label>Visitation Plan Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitation Plan Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>ASI CRM MO Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_VisitationPlanDetail</fullName>
        <active>true</active>
        <label>MY Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Visitation_Plan_Detail_Ad_Hoc</fullName>
        <active>true</active>
        <label>MY Visitation Plan Detail - Ad-Hoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Visitation_Plan_Detail_Cold_Call</fullName>
        <active>true</active>
        <label>MY Visitation Plan Detail - Cold Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>SG CRM Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Merchandiser_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>TW Merchandiser Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_OffTrade_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>VN OffTrade Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>VN Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>HK CRM Visitation Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Visitation_Plan_Detail</fullName>
        <active>true</active>
        <label>TH CRM Visitation Plan Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MY_Achievement_Chk</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE,
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY&apos;), 
ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Confirmed__c = FALSE, 
NOT( 
ISBLANK(ASI_HK_CRM_Achievement_Detail__c)
) 
)</errorConditionFormula>
        <errorMessage>Achievement Detail CANNOT be filled when the plan is not confirmed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MY_CannotEditConfirmed</fullName>
        <active>true</active>
        <description>Should not update confirmed visitations</description>
        <errorConditionFormula>AND(
	$User.BypassVR__c != TRUE,
	AND(
		CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY&apos;),
		NOT(
			OR(
				CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY_Visitation_Plan_Detail_Ad_Hoc&apos;),
				CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY_Visitation_Plan_Detail_Cold_Call&apos;)
			)
		)
	),
	ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Confirmed__c == TRUE,
	OR(
		ISCHANGED(ASI_HK_CRM_Visit_Date__c),
		ISCHANGED(ASI_HK_CRM_Subject__c),
		ISCHANGED(ASI_CRM_MY_Customer__c)
	)
)</errorConditionFormula>
        <errorMessage>The visitation plan is already confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MY_CannotSaveConfirmed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE, 
AND( 
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY&apos;), 
NOT( 
OR( 
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY_Visitation_Plan_Detail_Ad_Hoc&apos;), 
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_MY_Visitation_Plan_Detail_Cold_Call&apos;) 
) 
) 
), 
ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Confirmed__c == TRUE, 
ISNEW() 
)</errorConditionFormula>
        <errorMessage>Record CANNOT be created on the CONFIRMED plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_SalesCallVisitValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;),
 ISPICKVAL( ASI_CRM_Type_of_Visit__c , &quot;Sales Call&quot;),
OR (
 ISBLANK( TEXT(ASI_HK_CRM_Status__c ) ),
 ISBLANK(ASI_HK_CRM_Visit_Objective__c ),
 ISBLANK(ASI_HK_CRM_Achievement_Detail__c ),
 ISBLANK(ASI_CRM_Actions_To_Be_Taken__c )
)
)</errorConditionFormula>
        <errorMessage>Please enter all the visitation detail for Sales Call</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TW_ActualDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_TW_Visitation_Plan_Detail&apos;),NOT(ISNULL( ASI_TH_CRM_Visit_Date_Time_From__c )),
OR(TEXT(MONTH( DATEVALUE(ASI_TH_CRM_Visit_Date_Time_From__c ))) &lt;&gt;  ASI_HK_CRM_Visitation_Plan__r.ASI_CRM_Month_Number__c,
TEXT(YEAR( DATEVALUE(ASI_TH_CRM_Visit_Date_Time_From__c ))) &lt;&gt;   ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Year__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_Visit_Date_Time_From__c</errorDisplayField>
        <errorMessage>The Actual Visit month does not match with Visitation Plan month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TW_ValidateActiveAccount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_TW_Visitation_Plan_Detail&apos;), ASI_HK_CRM_Account__r.ASI_HK_CRM_Inactive__c  = TRUE)</errorConditionFormula>
        <errorDisplayField>ASI_HK_CRM_Account__c</errorDisplayField>
        <errorMessage>The Account is Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Cancellation_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_VN&quot;),
    ISPICKVAL(ASI_HK_CRM_Status__c, &quot;Cancelled&quot;),
    ISBLANK(ASI_HK_CRM_Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_HK_CRM_Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please input the Cancellation Reason!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_GMA_Sighting</fullName>
        <active>true</active>
        <description>When GMA Sighting is checked, GMA Sighting Sub-brand 1/GMA Sighting Quantity 1/GMA Sighting Liquor Shop 1 must be input</description>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_VN&quot;),
    ASI_CRM_GMA_Sighting__c,
    OR(
       ISBLANK(ASI_CRM_GMA_Sighting_Sub_brand_1__c),
       ISBLANK(ASI_CRM_GMA_Sighting_Quantity_1__c),
       ISBLANK(ASI_CRM_GMA_Sighting_Liquor_Shop_1__c)
    )
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_GMA_Sighting__c</errorDisplayField>
        <errorMessage>GMA Sighting Sub-brand 1, GMA Sighting Quantity 1, GMA Sighting Liquor Shop 1 should not be blank if there is GMA Sighting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Mandatory_Info</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_VN&quot;), 
OR(ISPICKVAL(ASI_CRM_Purpose_of_Visit__c , &quot;Contract Negotiation&quot;),ISPICKVAL(ASI_CRM_Purpose_of_Visit__c , &quot;Normal Visit&quot;),ISPICKVAL(ASI_CRM_Purpose_of_Visit__c , &quot;Promotion Discussion&quot;)),
ISPICKVAL( ASI_CRM_MY_Customer__r.ASI_TH_CRM_Contracted_With__c , &quot;PRVN&quot;),
!ISPICKVAL( ASI_HK_CRM_Status__c , &quot;Cancelled&quot;) ,
!(ISPICKVAL( ASI_HK_CRM_Status__c , &quot;Planned&quot;) &amp;&amp; ISCHANGED(ASI_HK_CRM_Status__c)),
!ISBLANK(text(ASI_HK_CRM_Status__c)) ,
OR( 
ISBLANK(ASI_CRM_Displayed_Sub_brand_1__c), 
ISBLANK(ASI_CRM_Current_Capacity__c), 
ISBLANK(ASI_CRM_Dominated_Sub_brand__c) 
) 
)</errorConditionFormula>
        <errorMessage>You are required to fulfill [Display sub-brand 1], [Dominated sub-brand] and [Current Capacity] for this PRVN Outlet visit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Mandatory_Purpose</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_VN&quot;), 
!ISPICKVAL( ASI_HK_CRM_Status__c , &quot;Cancelled&quot;) ,
ISBLANK(Text(ASI_CRM_Purpose_of_Visit__c))
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Purpose_of_Visit__c</errorDisplayField>
        <errorMessage>Purpose of Visit is mandatory information to select</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_PG_Activities</fullName>
        <active>true</active>
        <description>When PG Info is checked, PG Activities must be input</description>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_VN&quot;),
    ASI_CRM_PG_Info__c,
    ISBLANK(ASI_CRM_PG_Activities__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_PG_Activities__c</errorDisplayField>
        <errorMessage>PG Activities should not be blank if there is PG Info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_SetTimeInOutBeforeConfirm</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Confirmed__c),
OR(
NOT(ISBLANK(ASI_CRM_VN_Time_In__c)),
NOT(ISBLANK(ASI_CRM_VN_Time_Out__c))
))</errorConditionFormula>
        <errorMessage>Please confirm the Visitation Plan before set time in/out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_HK_CRM_CannotEditConfirmed</fullName>
        <active>false</active>
        <description>Should not update confirmed visitations</description>
        <errorConditionFormula>AND( RecordType.DeveloperName  = &quot;ASI_HK_CRM_Visitation_Plan_Detail&quot;,ASI_HK_CRM_Visitation_Plan__r.ASI_HK_CRM_Confirmed__c == TRUE)</errorConditionFormula>
        <errorMessage>The visitation plan is already confirmed and copied to visitation events</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_BarSupply_Others</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( ASI_TH_CRM_BarSupply_Others__c ),INCLUDES( ASI_TH_CRM_BarSupply__c , &apos;Others&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_BarSupply_Others__c</errorDisplayField>
        <errorMessage>Please specify.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_PromotionMaterial_Others</fullName>
        <active>false</active>
        <errorConditionFormula>AND(INCLUDES( ASI_TH_CRM_Promotion_Material__c ,&apos;Others&apos;),ISBLANK( ASI_TH_CRM_PromotionMaterial_Others__c ))</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_PromotionMaterial_Others__c</errorDisplayField>
        <errorMessage>Please specify.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_Signage_Others</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES( ASI_TH_CRM_Signage__c ,&apos;Others&apos;), ISBLANK(ASI_TH_CRM_Signage_Others__c ))</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_Signage_Others__c</errorDisplayField>
        <errorMessage>Please specify.</errorMessage>
    </validationRules>
</CustomObject>